# C--

Hw 1/: a.out  hw_13.cpp  hw_13_2.cpp  hw_13_3.cpp  hw_13_switch.cpp
Hw2/: a.out  hw_20_1.cpp  hw_20_2.cpp
Hw2_with_tests/src/: CMakeLists.txt  hw_20_2.cpp  hw_20_2.h
Hw2_with_tests/tests/: CMakeLists.txt  test_my_library.cpp
Hw3/: a.out  rule_of_zero.cpp  student_class.cpp
Hw3/Hw3_dynamic_array_with_tests/src/: CMakeLists.txt  DynamicArray.h  dynamic_array.cpp
Hw3/Hw3_dynamic_array_with_tests/tests/: CMakeLists.txt  test_my_library.cpp
Hw4/src/: expression_problem.cpp
Hw4/tests/: test_my_library.cpp
Hw5/src/: CMakeLists.txt  a.out  smart_pointer.cpp
Hw6/IO_ex_1/src/: split.h
Hw6/IO_ex_1/tests/: test_my_library.cpp
Hw6/IO_ex_2/src/: mytype.h
Hw6/IO_ex_2/tests/: test_my_library.cpp
Hw6/class_temp_ex_1/src/: pair.h
Hw6/class_temp_ex_1/tests/: test_my_library.cpp
Hw6/class_temp_ex_2/src/: transform.h
Hw6/class_temp_ex_2/tests/: test_my_library.cpp
Hw6/class_temp_ex_3/src/: is_raw_pointer.h
Hw6/class_temp_ex_3/tests/: test_my_library.cpp
Hw6/function_temp/src/: sum.h
Hw6/function_temp/tests/: test_my_library.cpp
Lesson10/: a.out  expression.h
Lesson12/: a.out  debugging.cpp
Lesson13/: mytype.h  split.h  test_my_library.cpp
Lesson14/: sum.h  template_hw.cpp
Lesson15/: a.out  test.cpp
Lesson2/: a.out  variable_test.cpp  variables.cpp
Lesson3/: CMakeLists.txt  main
Lesson3/src/: CMakeLists.txt  main.cpp  my_library.cpp  my_library.h
Lesson5/: CMakeLists.txt
Lesson6/: pointers.cpp
Lesson8/: constructors.cpp
(+7 files in other folders)
